--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,1 @@
-server.port 9090
-# Config H2
-spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:tempdb
+spring.application.name=articles-service
